--- a/note1.ipynb
+++ b/note1.ipynb
@@ -915,7 +915,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba758a71df664daca6be9345bcd577d9",
+       "model_id": "a4eb872039d94c00b0d21508d4b647b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1130,6 +1130,196 @@
     "HTML(html_template.substitute({'css_text': css_text,\n",
     "                               'js_text': js_text,\n",
     "                               'python_data': json.dumps(iris_array_of_dicts)}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea8d19a1-468e-4f04-a657-f0cfe9cb7ecd",
+   "metadata": {},
+   "source": [
+    "# 7. Ipyd3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b54742ab-9062-40b8-935c-63f3f6e174b6",
+   "metadata": {},
+   "source": [
+    "Ao pesquisar por bibliotecas que integram o D3.js foi encontrado o ipyd3, porém, esta biblioteca não tem muitos recursos além de plotar gráficos de nós e de árvore."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "35e97310-4ed8-4178-bcbe-68f41cb22842",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " import ipyd3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cfcd0efa-3741-4135-a0c2-7a120d886b41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6faf88cdfa2d40e6bdcf1783ac9fa7c7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ForceDirectedGraph(graph={'nodes': [{'id': 'node11', 'layer': 'layer1', 'group': 'group1'}, {'id': 'node1', 'l…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "graph = {\"nodes\":\n",
+    "            [\n",
+    "                {\"id\":\"node11\", \"layer\":\"layer1\", \"group\":\"group1\"},\n",
+    "                {\"id\":\"node1\", \"layer\":\"layer1\", \"group\":\"group1\" },\n",
+    "                {\"id\":\"node2\", \"layer\":\"layer1\", \"group\":\"group1\" },\n",
+    "                {\"id\":\"node5\", \"layer\":\"layer1\" },\n",
+    "                {\"id\":\"node4\", \"layer\":\"layer1\" },\n",
+    "                {\"id\":\"node3\", \"layer\":\"layer1\" },\n",
+    "                {\"id\":\"node6\", \"layer\":\"layer1\" },\n",
+    "                {\"id\":\"node7\", \"layer\":\"layer1\" },\n",
+    "                {\"id\":\"node8\", \"layer\":\"layer1\", \"group\":\"group2\"},\n",
+    "                {\"id\":\"node9\", \"layer\":\"layer1\", \"group\":\"group2\"},\n",
+    "                {\"id\":\"node10\", \"layer\":\"layer1\",\"group\":\"group2\"}\n",
+    "            ],\n",
+    "         \"links\":\n",
+    "             [\n",
+    "                 {\n",
+    "                     \"source\":\"node1\",\n",
+    "                     \"target\":\"node2\",\n",
+    "                     \"layer\":\"layer1-layer1\"\n",
+    "                 },\n",
+    "                  {\n",
+    "                     \"source\":\"node11\",\n",
+    "                     \"target\":\"node2\",\n",
+    "                     \"layer\":\"layer1-layer1\"\n",
+    "                 },\n",
+    "                 {\n",
+    "                     \"source\":\"node1\",\n",
+    "                     \"target\":\"node3\",\n",
+    "                     \"layer\":\"layer1-layer1\"\n",
+    "                 },\n",
+    "                 {\n",
+    "                     \"source\":\"node1\",\n",
+    "                     \"target\":\"node4\",\n",
+    "                     \"layer\":\"layer1-layer1\"\n",
+    "                 },\n",
+    "                 {\n",
+    "                     \"source\":\"node1\",\n",
+    "                     \"target\":\"node5\",\n",
+    "                     \"layer\":\"layer1-layer1\"\n",
+    "                 },\n",
+    "                 {\n",
+    "                     \"source\":\"node5\",\n",
+    "                     \"target\":\"node6\",\n",
+    "                     \"layer\":\"layer1-layer1\"\n",
+    "                 },\n",
+    "                 {\n",
+    "                     \"source\":\"node4\",\n",
+    "                     \"target\":\"node7\",\n",
+    "                     \"layer\":\"layer1-layer1\"\n",
+    "                 },\n",
+    "                 {\n",
+    "                     \"source\":\"node3\",\n",
+    "                     \"target\":\"node8\",\n",
+    "                     \"layer\":\"layer1-layer1\"\n",
+    "                 },\n",
+    "                 {\n",
+    "                     \"source\":\"node2\",\n",
+    "                     \"target\":\"node9\",\n",
+    "                     \"layer\":\"layer1-layer1\"\n",
+    "                 },\n",
+    "                 {\n",
+    "                     \"source\":\"node9\",\n",
+    "                     \"target\":\"node10\",\n",
+    "                     \"layer\":\"layer1-layer1\"\n",
+    "                 }\n",
+    "             ]\n",
+    "        }\n",
+    "ipyd3.ForceDirectedGraph(graph = graph, width=900)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6b9c6379-2162-4890-a853-64cd6509cbf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "  \"name\": \"flare\",\n",
+    "  \"children\": [\n",
+    "   {\n",
+    "    \"name\": \"analytics\",\n",
+    "    \"children\": [\n",
+    "     {\n",
+    "      \"name\": \"cluster\",\n",
+    "      \"children\": [\n",
+    "       {\"name\": \"AgglomerativeCluster\", \"value\": 3938},\n",
+    "       {\"name\": \"CommunityStructure\", \"value\": 3812},\n",
+    "       {\"name\": \"HierarchicalCluster\", \"value\": 6714},\n",
+    "       {\"name\": \"MergeEdge\", \"value\": 743}\n",
+    "      ]\n",
+    "     },\n",
+    "     {\n",
+    "      \"name\": \"graph\",\n",
+    "      \"children\": [\n",
+    "       {\"name\": \"BetweennessCentrality\", \"value\": 3534},\n",
+    "       {\"name\": \"LinkDistance\", \"value\": 5731},\n",
+    "       {\"name\": \"MaxFlowMinCut\", \"value\": 7840},\n",
+    "       {\"name\": \"ShortestPaths\", \"value\": 5914},\n",
+    "       {\"name\": \"SpanningTree\", \"value\": 3416}\n",
+    "      ]\n",
+    "     },\n",
+    "     {\n",
+    "      \"name\": \"optimization\",\n",
+    "      \"children\": [\n",
+    "       {\"name\": \"AspectRatioBanker\", \"value\": 7074}\n",
+    "      ]\n",
+    "     }\n",
+    "    ]\n",
+    "   }\n",
+    "  ]\n",
+    " }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3b20b8be-c7f4-4d24-997a-2fe2a418f9bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "004a6748a0654268af22754590578ee4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HierarchicalGraph(data={'name': 'flare', 'children': [{'name': 'analytics', 'children': [{'name': 'cluster', '…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    " hg = ipyd3.HierarchicalGraph(data=data)\n",
+    "\n",
+    "hg"
    ]
   }
  ],
