Nome do componente modificado para ScatterplotComponent

--- a/note2.ipynb
+++ b/note2.ipynb
@@ -11,14 +11,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c4878e46-1f3d-4f21-b94b-61370dd5175c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('./dash_interface/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e2e6d7dc-f565-4674-a796-0529f3d7aa89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dash_interface.my_dash_components import MyDashComponents\n",
+    "from my_dash_components import ScatterplotComponent\n",
     "from dash import dcc, html, Input, Output\n",
     "import pandas as pd\n",
     "from jupyter_dash import JupyterDash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "117f159b-ada3-4d23-8441-3b5fd06a57f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hostId = 0\n",
+    "def getHost():\n",
+    "    global hostId\n",
+    "    hostId += 1\n",
+    "    return '127.0.0.' + str(hostId)"
    ]
   },
   {
@@ -36,14 +61,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename =  'web3/data.tsv'\n",
+    "filename =  '../web3/data.tsv'\n",
     "iris = pd.read_csv(filename,sep=\"\\t\")\n",
     "iris_array_of_dicts = iris.to_dict(orient='records')\n",
     "\n",
     "app = JupyterDash(__name__)\n",
     "\n",
     "app.layout = html.Div([\n",
-    "    MyDashComponents(\n",
+    "    ScatterplotComponent(\n",
     "        id='input',\n",
     "        data=iris_array_of_dicts\n",
     "    ),\n",
@@ -64,7 +89,8 @@
     "    res = iris[mask].to_dict(orient='records')\n",
     "    return res\n",
     "\n",
-    "app.run_server(mode=\"inline\")\n"
+    "if __name__ == '__main__':\n",
+    "    app.run_server(mode=\"jupyterlab\", host=getHost())\n"
    ]
   }
  ],
