Criado exemplo no notebook do Pdp com o linear e o hist

--- a/note2.ipynb
+++ b/note2.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from my_dash_components import ScatterplotComponent\n",
+    "from my_dash_components import ScatterplotComponent, LinearplotComponent, HistogramplotComponent\n",
     "from dash import dcc, html, Input, Output\n",
     "import pandas as pd\n",
     "from jupyter_dash import JupyterDash"
@@ -91,6 +91,170 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(mode=\"jupyterlab\", host=getHost())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be4022d4-663d-40a7-8f8b-77cce9e2f389",
+   "metadata": {},
+   "source": [
+    "# 2. Pdp com histograma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1356290-e77b-4ade-8580-2dc684d415d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '../data/bike.csv'\n",
+    "df = pd.read_csv(path)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c09dbf69-e89a-443d-b46e-5de99944af32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd30ec4f-234a-41b6-98d6-6161bd0c4d61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df[['temp', 'hum', 'windspeed']]\n",
+    "y = df['cnt']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29638e98-94d9-4973-9c1a-b7d0647298b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.inspection import PartialDependenceDisplay\n",
+    "from sklearn.inspection import partial_dependence\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "clf = RandomForestRegressor(n_estimators=10).fit(X, y)\n",
+    "features, feature_names = [(0,)], [f\"Features #{i}\" for i in range(X.shape[1])]\n",
+    "deciles = {0: np.linspace(0, 1, num=5)}\n",
+    "pd_results = partial_dependence(\n",
+    "    clf, X, features=0, kind=\"average\")\n",
+    "display = PartialDependenceDisplay(\n",
+    "    [pd_results], features=features, feature_names=feature_names,\n",
+    "    target_idx=0, deciles=deciles\n",
+    ")\n",
+    "display.plot()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f0eb8c0-90ec-4ba5-9a13-60cdc38b91a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df72ee47-67cc-4ad5-a5b4-d9bcca2311c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(pd_results['grid_values'][0], pd_results['average'][0])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77a5ec67-71a7-4448-86f3-99e90ed9c343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = [0,1,2]\n",
+    "PartialDependenceDisplay.from_estimator(clf, X, features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fe830aa-b2b2-4f3d-9af3-7e2b1f6a46b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c692f686-cfc3-46cc-a28e-743e54e890e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.histplot(df['temp'], kde=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74cb4b46-6a77-4c6c-9845-9eeee0d32bb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdp_df = pd.DataFrame({'grid_values': pd_results['grid_values'][0], 'average': pd_results['average'][0]})\n",
+    "pdp_dict = pdp_df.to_dict(orient='records')\n",
+    "x_start = min(df['temp'].min(), pdp_df['grid_values'].min())\n",
+    "x_end = max(df['temp'].max(), pdp_df['grid_values'].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c767a27c-88e1-4ce9-98df-ca9b26331041",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app = JupyterDash(__name__)\n",
+    "\n",
+    "app.layout = html.Div([\n",
+    "    LinearplotComponent(\n",
+    "        id='input',\n",
+    "        data=pdp_dict,\n",
+    "        x_axis='grid_values',\n",
+    "        y_axis='average',\n",
+    "        xStart=x_start,\n",
+    "        xEnd=x_end,\n",
+    "    ),\n",
+    "    HistogramplotComponent(\n",
+    "        id='hist',\n",
+    "        data=df.to_dict(orient='records'),\n",
+    "        value='temp',\n",
+    "        xStart=x_start,\n",
+    "        xEnd=x_end,\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server(mode=\"jupyterlab\", host=getHost())"
    ]
   }
  ],
