Implementado modificação em outra célula

--- a/note1.ipynb
+++ b/note1.ipynb
@@ -756,7 +756,7 @@
     "    return fig\n",
     "\n",
     "\n",
-    "app.run_server(mode=\"inline\")"
+    "app.run(mode=\"jupyter\")"
    ]
   },
   {
