Create scatterplot example for upywidgets

--- a/note3.ipynb
+++ b/note3.ipynb
@@ -7,15 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "try:\n",
-    "    dir_changed\n",
-    "except NameError as e:\n",
-    "    os.chdir('./dash_interface/')\n",
-    "    dir_changed = True\n",
-    "from dash import dcc, html, Input, Output\n",
-    "from jupyter_dash import JupyterDash\n",
-    "%pwd"
+    "from dash import dcc, html, Input, Output, Dash"
    ]
   },
   {
@@ -36,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = JupyterDash(__name__)\n",
+    "app = Dash(__name__)\n",
     "\n",
     "app.layout = html.Div([\n",
     "    html.Div(\n",
@@ -72,7 +64,7 @@
     "from sklearn.inspection import partial_dependence\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "path = '../data/bike.csv'\n",
+    "path = './data/bike.csv'\n",
     "df = pd.read_csv(path)\n",
     "df.head()"
    ]
@@ -124,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = JupyterDash(__name__)\n",
+    "app = Dash(__name__)\n",
     "\n",
     "app.layout = html.Div([\n",
     "    LinearplotComponent(\n",
@@ -177,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
