--- a/note2.ipynb
+++ b/note2.ipynb
@@ -11,25 +11,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4878e46-1f3d-4f21-b94b-61370dd5175c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.chdir('./dash_interface/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e2e6d7dc-f565-4674-a796-0529f3d7aa89",
    "metadata": {},
    "outputs": [],
    "source": [
     "from my_dash_components import ScatterplotComponent, LinearplotComponent, HistogramplotComponent, LinearHistComponent\n",
-    "from dash import dcc, html, Input, Output\n",
-    "import pandas as pd\n",
-    "from jupyter_dash import JupyterDash"
+    "from dash import dcc, html, Input, Output, Dash\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -47,11 +35,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename =  '../web3/data.tsv'\n",
+    "filename =  './web3/data.tsv'\n",
     "iris = pd.read_csv(filename,sep=\"\\t\")\n",
     "iris_array_of_dicts = iris.to_dict(orient='records')\n",
     "\n",
-    "app = JupyterDash(__name__)\n",
+    "app = Dash(__name__)\n",
     "\n",
     "app.layout = html.Div([\n",
     "    ScatterplotComponent(\n",
@@ -80,14 +68,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41649bd7-eaef-4d2c-abe3-7e23c9f8b77a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "be4022d4-663d-40a7-8f8b-77cce9e2f389",
    "metadata": {},
@@ -102,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '../data/bike.csv'\n",
+    "path = './data/bike.csv'\n",
     "df = pd.read_csv(path)\n",
     "df.head()"
    ]
@@ -219,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = JupyterDash(__name__)\n",
+    "app = Dash(__name__)\n",
     "\n",
     "app.layout = html.Div([\n",
     "    LinearplotComponent(\n",
@@ -270,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = JupyterDash(__name__)\n",
+    "app = Dash(__name__)\n",
     "\n",
     "app.layout = html.Div([\n",
     "    LinearHistComponent(\n",
@@ -341,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
