Create ipywidgets scatterplot

--- a/note4.ipynb
+++ b/note4.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import jupyter_widget_example\n",
+    "import ipywidgets_ts\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,26 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mywidget = jupyter_widget_example.Scatterplot()\n",
-    "# url = \"https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/2_TwoNum.csv\"\n",
-    "# df = pd.read_csv(url, sep=\",\")\n",
-    "# value = df.to_dict('records')\n",
-    "\n"
+    "mywidget = ipywidgets_ts.Scatterplot(value=iris_array_of_dicts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c2368c584524af68d41f7295bca10ca",
+       "model_id": "e02b7cd765a34f118ae37a1888bac3f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -50,13 +46,47 @@
        "Scatterplot(value=[{'sepalLength': 5.1, 'sepalWidth': 3.5, 'petalLength': 1.4, 'petalWidth': 0.2, 'species': '…"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mywidget.initialize(iris_array_of_dicts)"
+    "mywidget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mywidget.value = mywidget.value[:-50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e02b7cd765a34f118ae37a1888bac3f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Scatterplot(value=[{'sepalLength': 5.1, 'sepalWidth': 3.5, 'petalLength': 1.4, 'petalWidth': 0.2, 'species': '…"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mywidget"
    ]
   },
   {
@@ -87,5 +117,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
