Create ipywidgets linearplot

--- a/note4.ipynb
+++ b/note4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,70 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mywidget = ipywidgets_ts.Scatterplot(value=iris_array_of_dicts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e02b7cd765a34f118ae37a1888bac3f9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Scatterplot(value=[{'sepalLength': 5.1, 'sepalWidth': 3.5, 'petalLength': 1.4, 'petalWidth': 0.2, 'species': '…"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mywidget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mywidget.value = mywidget.value[:-50]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e02b7cd765a34f118ae37a1888bac3f9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Scatterplot(value=[{'sepalLength': 5.1, 'sepalWidth': 3.5, 'petalLength': 1.4, 'petalWidth': 0.2, 'species': '…"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mywidget"
+    "scatterplot = ipywidgets_ts.Scatterplot(data=iris_array_of_dicts)"
    ]
   },
   {
@@ -94,7 +35,107 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scatterplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scatterplot.data = scatterplot.data[:-50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scatterplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.inspection import partial_dependence\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "path = 'data/bike.csv'\n",
+    "df = pd.read_csv(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_features = ['temp', 'hum', 'windspeed']\n",
+    "X = df[num_features]\n",
+    "y = df['cnt']\n",
+    "feature = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_feature(feature):\n",
+    "    clf = RandomForestRegressor(n_estimators=10).fit(X, y)\n",
+    "    pd_results = partial_dependence(\n",
+    "    clf, X, features=feature, kind=\"average\")\n",
+    "    pdp_df = pd.DataFrame({'grid_values': pd_results['grid_values'][0], 'average': pd_results['average'][0]})\n",
+    "    pdp_dict = pdp_df.to_dict(orient='records')\n",
+    "    return pdp_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linearplot = ipywidgets_ts.Linearplot(\n",
+    "    data=get_feature(0),\n",
+    "    x_axis = \"grid_values\",\n",
+    "    y_axis = \"average\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linearplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linearplot.data = get_feature(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linearplot.clickedValue"
+   ]
   }
  ],
  "metadata": {
