Create ipywidgets histogramplot

--- a/note4.ipynb
+++ b/note4.ipynb
@@ -136,6 +136,34 @@
    "source": [
     "linearplot.clickedValue"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histogram = ipywidgets_ts.Histogramplot(\n",
+    "    data=df.to_dict(orient='records'),\n",
+    "    value=num_features[feature],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histogram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
