Create ipywidgets linear-histogram plot

--- a/note4.ipynb
+++ b/note4.ipynb
@@ -163,7 +163,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "feature = 0\n",
+    "\n",
+    "linearhist = ipywidgets_ts.LinearHist(\n",
+    "    pdpData=get_feature(feature),\n",
+    "    histData=df.to_dict(orient='records'),\n",
+    "    x_axis = \"grid_values\",\n",
+    "    y_axis = \"average\",\n",
+    "    histValue=num_features[feature]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linearhist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linearhist.clickedValue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linearhist.histValue = num_features[1]\n",
+    "linearhist.pdpData = get_feature(1)"
+   ]
   }
  ],
  "metadata": {
